cmabios en index.html desde VSCode

--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -15,6 +15,7 @@
   <p>Nueva línea</p>
   <p>Corrección de errores en main</p>
   <div><img src="descarga.png" alt="Hello Git" style="width:100%;max-width:640px"></div>
+  <p>Adición desde el VS Code</p>
 
 </body>
 
