Actualizado index.html desde GitHub en nuevo branch creada en GitHub

--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -15,7 +15,8 @@
   <p>Nueva línea</p>
   <p>Corrección de errores en main</p>
   <div><img src="descarga.png" alt="Hello Git" style="width:100%;max-width:640px"></div>
-  <p>Adición desde el VS Code</p>
+
+  <p>Adición desde GitHub en branch creada en GitHub</p>
 
 </body>
 
